Fix signup button's align.

--- a/dropbeat/static/css/dropbeat.css
+++ b/dropbeat/static/css/dropbeat.css
@@ -132,18 +132,21 @@ input[type='submit'] {
   -o-box-sizing: border-box;
   box-sizing: border-box;
 }
-#dropbeat .play-controls .account-menus .signin-btn,
-#dropbeat .play-controls .account-menus .signup-btn,
-#dropbeat .play-controls .account-menus .signout-btn {
-  float: left;
+#dropbeat .play-controls .account-menus {
   display: block;
-  padding: 0 18px;
+  padding: 10px 18px;
   color: #8d02ef;
   line-height: 18px;
-  padding-top: 2px;
-  padding-bottom: 2px;
   font-size: 12px;
+}
+#dropbeat .play-controls .account-menus .signin-btn,
+#dropbeat .play-controls .account-menus .signout-btn {
   cursor: pointer;
+  float: left;
+}
+#dropbeat .play-controls .account-menus .signup-btn {
+  cursor: pointer;
+  float: right;
 }
 #dropbeat .play-controls .account-menus .signin-btn:hover,
 #dropbeat .play-controls .account-menus .signup-btn:hover,
